abstract class Shuffler {
  const Shuffler();

  List<T> shuffle<T>(List<T> items);
}

